# simple-SDL-game

./: CMakeLists.txt  vcpkg.json
badwa/: CMakeLists.txt
badwa/src/: main.cpp
res/: config.cmake  config.h.in
